--- a/main.ipynb
+++ b/main.ipynb
@@ -100,12 +100,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\omelchenko\\Documents\\GitHub\\image_classifaier\\model_util.py:38: The name tf.keras.backend.set_session is deprecated. Please use tf.compat.v1.keras.backend.set_session instead.\n",
+      "WARNING:tensorflow:From C:\\py_projects\\imgcls\\model_util.py:38: The name tf.keras.backend.set_session is deprecated. Please use tf.compat.v1.keras.backend.set_session instead.\n",
       "\n",
       "Loading MobileNet.\n",
       "\n",
       "Loading MobileNet.\n",
-      "\n"
+      "\n",
+      "['hat.jpg'] \n",
+      "\n",
+      "['hat.jpg']\n"
      ]
     }
    ],
@@ -145,30 +148,10 @@
     "    test2 = np.array(classifier.__dict__['all_skus'][str(classifaier_all_skus_list[0])][0])\n",
     "    np.savetxt(\"Otest/test2.csv\", test2, delimiter=',')\n",
     "    \n",
-    "    print(inp_classifaier_all_skus_list, '/n')\n",
+    "    print(inp_classifaier_all_skus_list, '\\n')\n",
     "    print(classifaier_all_skus_list)\n",
     "    \n",
-    "    \n",
-    "#     \"\"\"Создаём объект сравнения\"\"\"\n",
-    "#     similarity = ImageSimilarity()\n",
-    "    \n",
-    "#     '''Setup'''\n",
-    "#     similarity.batch_size = 16\n",
-    "#     similarity.num_processes = 2\n",
-    "    \n",
-    "#     '''Load source data'''\n",
-    "#     test1_sim = similarity.load_data_csv('Odata/test1.csv', delimiter=',')\n",
-    "#     test2_sim = similarity.load_data_csv('Otest/test2.csv', delimiter=',')#, cols=['id', 'url'])\n",
-    "\n",
-    "#     '''Save features and fields'''\n",
-    "#     similarity.save_data('test1', test1)\n",
-    "#     similarity.save_data('test2', test2)\n",
-    "\n",
-    "#     '''Calculate similarities'''\n",
-    "#     result = similarity.iteration(['test1_id', 'test1_url', 'test2_id', 'test2_url'], thresh=0.845)\n",
-    "#     print('Row for source file 1, and column for source file 2.')\n",
-    "#     print(result)\n",
-    "        \n",
+    "            \n",
     "#     print(classifier.__dict__)\n",
     "#     print(in_classifaier.__dict__)\n",
     "#     cv2.imshow(\"Image\", image)\n",
@@ -178,42 +161,103 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9e6757a2",
+   "id": "7b8ebd8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread('Odata/hat.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c9fb880c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\omelchenko\\Documents\\GitHub\\image_classifaier\\multi.py:144: UserWarning: genfromtxt: Empty input file: \"Odata/test1.csv\"\n",
-      "  data = np.genfromtxt(\n",
-      "C:\\Users\\omelchenko\\Documents\\GitHub\\image_classifaier\\multi.py:144: UserWarning: genfromtxt: Empty input file: \"Otest/test2.csv\"\n",
-      "  data = np.genfromtxt(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading MobileNet.\n",
-      "\n",
-      "test1: download starts.\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index -1 is out of bounds for axis 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m test2_sim \u001b[38;5;241m=\u001b[39m similarity\u001b[38;5;241m.\u001b[39mload_data_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOtest/test2.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;66;03m#, cols=['id', 'url'])\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;124;03m'''Save features and fields'''\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m \u001b[43msimilarity\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtest1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest1_sim\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m similarity\u001b[38;5;241m.\u001b[39msave_data(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest2\u001b[39m\u001b[38;5;124m'\u001b[39m, test2_sim)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124;03m'''Calculate similarities'''\u001b[39;00m\n",
-      "File \u001b[1;32m~\\Documents\\GitHub\\image_classifaier\\multi.py:190\u001b[0m, in \u001b[0;36mImageSimilarity.save_data\u001b[1;34m(self, title, lines)\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m: download starts.\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m title)\n\u001b[0;32m    188\u001b[0m start \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mnow()\n\u001b[1;32m--> 190\u001b[0m args \u001b[38;5;241m=\u001b[39m [{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpath\u001b[39m\u001b[38;5;124m'\u001b[39m: line[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfields\u001b[39m\u001b[38;5;124m'\u001b[39m: line} \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines]\n\u001b[0;32m    192\u001b[0m \u001b[38;5;66;03m# Prediction\u001b[39;00m\n\u001b[0;32m    193\u001b[0m generator \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_predict_generator(args)\n",
-      "File \u001b[1;32m~\\Documents\\GitHub\\image_classifaier\\multi.py:190\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m: download starts.\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m title)\n\u001b[0;32m    188\u001b[0m start \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mnow()\n\u001b[1;32m--> 190\u001b[0m args \u001b[38;5;241m=\u001b[39m [{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpath\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[43mline\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfields\u001b[39m\u001b[38;5;124m'\u001b[39m: line} \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines]\n\u001b[0;32m    192\u001b[0m \u001b[38;5;66;03m# Prediction\u001b[39;00m\n\u001b[0;32m    193\u001b[0m generator \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_predict_generator(args)\n",
-      "\u001b[1;31mIndexError\u001b[0m: index -1 is out of bounds for axis 0 with size 0"
-     ]
+     "data": {
+      "text/plain": [
+       "('hat.jpg', 1.0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "classifier.predict(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "819c1e59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert os.path.exists(d_path[0])\n",
+    "img = cv.imread(path)\n",
+    "assert img is not None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eab05d9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4989a77e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd78f279",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.subtract(test2, test1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c55ada64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(np.subtract(test2, test1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab9abda3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%bash # magic command to use cell like shell(bash)\n",
+    "# ! cat Otest/test2.csv # command to use cell like shell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e6757a2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\"\"\"Создаём объект сравнения\"\"\"\n",
     "similarity = ImageSimilarity()\n",
@@ -323,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
