--- a/Helper_2.0.ipynb
+++ b/Helper_2.0.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classification_model_xml = 'image-retrieval-0001/FP16/image-retrieval-0001.xml'\n",
+    "classification_model_xml = 'image-retrieval-0001/FP32/image-retrieval-0001.xml'\n",
     "\n",
     "model = core.read_model(model=classification_model_xml)\n",
     "compiled_model = core.compile_model(model=model, device_name=\"CPU\")"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "dd2839a9",
    "metadata": {},
    "outputs": [],
@@ -145,88 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "2897e8a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'add_extension',\n",
-       " 'available_devices',\n",
-       " 'compile_model',\n",
-       " 'get_available_devices',\n",
-       " 'get_property',\n",
-       " 'get_versions',\n",
-       " 'import_model',\n",
-       " 'query_model',\n",
-       " 'read_model',\n",
-       " 'register_plugin',\n",
-       " 'register_plugins',\n",
-       " 'set_property',\n",
-       " 'unload_plugin']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(core)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "ca82274c",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Core.compile_model() missing 1 required positional argument: 'model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m help(\u001b[43mcore\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: Core.compile_model() missing 1 required positional argument: 'model'"
-     ]
-    }
-   ],
-   "source": [
-    "core.__eq__()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "039202f5",
+   "id": "e4b72b6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -234,27 +154,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1fff51d",
+   "id": "1cc4aee5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Данный блок кода из лекции, его необходимо распределить по приложению!!!!! \n",
-    "input_blob = next(iter(net.input_info))\n",
-    "out_blob = next(iter(net.outputs))\n",
-    "n, h, w, c = net.input_info[input_blob].input_data.shape\n",
-    "# Load, transpose, expand operations\n",
-    "blob = preprocess_image(imagePath, h, w)\n",
-    "# Execute\n",
-    "output = exec_net.infer(inputs = {input_blob: blob})\n",
-    "output = output[out_blob]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "644a9164",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 224, 224, 3)\n",
+      "(1, 224, 224, 3)\n",
+      "(1, 224, 224, 3)\n",
+      "(1, 224, 224, 3)\n",
+      "(1, 224, 224, 3)\n",
+      "(1, 224, 224, 3)\n",
+      "(1, 224, 224, 3)\n",
+      "(1, 224, 224, 3)\n",
+      "(1, 224, 224, 3)\n",
+      "(1, 224, 224, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# Preprocess the batch of images\n",
     "batch_images_path = 'archive/batchZip.zip'\n",
@@ -267,7 +194,7 @@
     "batch_images = []\n",
     "for image_file in os.listdir(batch_images_dir):\n",
     "    image_path = os.path.join(batch_images_dir, image_file)\n",
-    "    preprocessed_image = preprocess_image(image_path)\n",
+    "    preprocessed_image = preprocess_image(image_path, 224, 224)\n",
     "    batch_images.append(preprocessed_image)\n",
     "\n",
     "batch_images = np.array(batch_images)"
@@ -275,18 +202,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "05246368",
+   "execution_count": 26,
+   "id": "c12026ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = compiled_model([preprocessed_query_image])[output_layer]"
+    "result_batch = []\n",
+    "for i in range(len(batch_images)):\n",
+    "    result = compiled_model([batch_images[i]])[output_layer]\n",
+    "    result_batch.append(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e2cc615e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_batch = np.array(result_batch)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ae67960",
+   "id": "20c204fe",
    "metadata": {},
    "outputs": [],
    "source": []
