--- a/Helper_2.0.ipynb
+++ b/Helper_2.0.ipynb
@@ -13,6 +13,7 @@
     "import io\n",
     "import inspect\n",
     "import cv2\n",
+    "from sklearn.metrics.pairwise import cosine_distances\n",
     "\n",
     "from openvino.inference_engine import IECore\n",
     "from openvino.runtime import Core"
@@ -109,14 +110,14 @@
     "#     image = image.transpose((2, 0, 1))  # Interchange dimensions to [1, 3, 224, 224]\n",
     "    image = np.array(image)\n",
     "    blob = np.expand_dims(image, axis=0)  # Add batch dimension\n",
-    "    print(blob.shape)\n",
+    "#     print(blob.shape)\n",
     "    return blob"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d6e6e2b3",
+   "id": "f40bf4db",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +129,7 @@
     }
    ],
    "source": [
-    "query_image_path = 'images/knf.jpg'\n",
+    "query_image_path = os.path.join('images', os.listdir('images')[0]) # возвращаем путь к картинке по которой ищем совпадение\n",
     "preprocessed_query_image = preprocess_image(query_image_path, 224, 224)"
    ]
   },
@@ -139,29 +140,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_infer = compiled_model([preprocessed_query_image])[output_layer]\n",
+    "result_infer = compiled_model([preprocessed_query_image])[output_layer] # обрабатываем картинку\n",
     "result_index = np.argmax(result_infer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4b72b6c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cc4aee5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "644a9164",
    "metadata": {},
    "outputs": [
@@ -197,36 +182,112 @@
     "    preprocessed_image = preprocess_image(image_path, 224, 224)\n",
     "    batch_images.append(preprocessed_image)\n",
     "\n",
-    "batch_images = np.array(batch_images)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "c12026ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "batch_images = np.array(batch_images)\n",
+    "\n",
     "result_batch = []\n",
     "for i in range(len(batch_images)):\n",
     "    result = compiled_model([batch_images[i]])[output_layer]\n",
-    "    result_batch.append(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "e2cc615e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    result_batch.append(result)\n",
+    "    \n",
     "result_batch = np.array(result_batch)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "d8f32d9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_box = []\n",
+    "for i in range(len(result_batch)):\n",
+    "    index = np.argmax(result_batch[i])\n",
+    "    index_box.append(index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "600f96a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comparation = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "42f3ce81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding new key/value to dict sample \n",
+    "dicty['a'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fd333dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(result_batch)):\n",
+    "    similarities = 1 - cosine_distances(result_infer, result_batch[i])\n",
+    "    percentages = similarities * 100\n",
+    "    comparation[os.listdir(batch_images_dir)[i]] = percentages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a5257da6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best similarity is : knife.jpg 86.75353240966797 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_similarity = max(comparation, key= lambda x: comparation[x]) # находим максимальное значение\n",
+    "print(f\"Best similarity is : {best_similarity}\", comparation[best_similarity].item(0, 0), '%') # функция .item() извлекает данные из nd.array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "79db477b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Совпадение с изображением 1: [86.75353]%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Рассчитать косинусное расстояние между result_infer и каждым объектом в result_batch\n",
+    "similarities = 1 - cosine_distances(result_infer, result_batch[5])\n",
+    "\n",
+    "# Преобразовать косинусные расстояния в проценты совпадения\n",
+    "percentages = similarities * 100\n",
+    "\n",
+    "# Вывести проценты совпадения\n",
+    "for i, percentage in enumerate(percentages):\n",
+    "    print(f\"Совпадение с изображением {i+1}: {percentage}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "20c204fe",
+   "id": "862b8038",
    "metadata": {},
    "outputs": [],
    "source": []
